tests/unit-fail-compilation/j078h.c
int f(restrict void){
	return 0;
}

int main(void){
	return 0;
}
